[package]
name = "dshot-sender-test"
version = "0.1.0"
edition = "2024"

[dependencies]
panic-halt = "0.2.0"
dshot-pio = { git = "https://github.com/peterkrull/dshot-pio", features = ["rp2040-hal"] }
rp2040-hal = { version = "0.11.0", features = ["rt"] }
rp2040-boot2 = "0.3.0"
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["critical-section", "critical-section-single-core"] }

